--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,6 @@ dependencies = [
     "python-dotenv==1.0.1",
     "python-multipart==0.0.9",
     "reportlab>=4.4.3",
+    "sse-starlette>=3.0.2",
     "uvicorn[standard]==0.29.0",
 ]
